--- a/NotificationControl.xaml
+++ b/NotificationControl.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:KSP_WPF"
              mc:Ignorable="d"
             d:DesignHeight="60" d:DesignWidth="300">
-    <Grid Name="GD_Main" Background="Teal" IsHitTestVisible="True">
+    <Grid Name="GD_Main" Background="Transparent" IsHitTestVisible="True">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="60"/>
@@ -21,5 +21,6 @@
             </StackPanel>
         </Grid>
         <Rectangle Stroke="Gray" StrokeThickness="1" VerticalAlignment="Bottom"/>
+        <Rectangle Name="RA_Notify" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Fill="LightBlue" Width="5" Height="50"/>
     </Grid>
 </UserControl>
