--- a/MailControl.xaml
+++ b/MailControl.xaml
@@ -17,12 +17,12 @@
         </Grid.ColumnDefinitions>
         <Rectangle Name="RA_BG"/>
         <Image Name="IMG_Profile" Width="50" Height="50" Stretch="UniformToFill"/>
-        <Rectangle Width="50" Height="50" Stroke="LightGray"/>
+        <Rectangle Width="50" Height="50" Stroke="#DDDDDD"/>
         <StackPanel Orientation="Vertical" Grid.Column="1">
             <TextBlock Name="TB_Name" FontWeight="Bold" Text="이름" Margin="5,4,5,0"/>
             <TextBlock Name="TB_Content" FontWeight="Regular" FontSize="10" Text="내용" Margin="5,0,5,0" TextTrimming="CharacterEllipsis"/>
             <TextBlock Name="TB_Date" FontWeight="ExtraLight" Foreground="#444444" FontSize="10" Text="YYYY-MM-DD" Margin="5,0,5,0"/>
         </StackPanel>
-        <iconPacks:PackIconMaterial Name="IC_Reply" Kind="Send" Width="40" Padding="5,5,5,5" Height="40" Foreground="Gray" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="2" IsHitTestVisible="True"/>
+        <iconPacks:PackIconMaterial Name="IC_Reply" Kind="Send" Width="40" Padding="5,5,5,5" Height="40" Foreground="Gray" Background="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="2" IsHitTestVisible="True"/>
     </Grid>
 </UserControl>
