--- a/MailWindow.xaml
+++ b/MailWindow.xaml
@@ -9,11 +9,13 @@
         mc:Ignorable="d"
         PreviewKeyDown="MetroWindow_PreviewKeyDown"
         Closed="MetroWindow_Closed"
-        Title="쪽지 목록" Height="320" Width="400" Icon="icon2.png" ShowIconOnTitleBar="False">
+        Title="쪽지 목록" Height="360" Width="300" Icon="icon2.png" ShowIconOnTitleBar="False">
     <Grid>
         <ScrollViewer Name="SV_Main" PreviewMouseWheel="SV_Main_PreviewMouseWheel" VerticalScrollBarVisibility="Hidden">
             <StackPanel Name="SP_Main"/>
         </ScrollViewer>
+        <Rectangle Name="RA_Loading" Fill="White" Visibility="Collapsed"/>
+        <controls:ProgressRing Name="PR_Loading" IsActive="True" Visibility="Collapsed"/>
     </Grid>
     <controls:MetroWindow.RightWindowCommands>
         <controls:WindowCommands>
@@ -26,8 +28,8 @@
                 </Button>
                 <Button Name="BT_Refresh" Click="BT_Refresh_Click">
                     <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Refresh"/>
-                        <TextBlock Text="새로고침"/>
+                        <materialDesign:PackIcon Name="IC_Refresh" Kind="Refresh"/>
+                        <TextBlock Name="TB_RefreshBT" Text="새로고침"/>
                     </StackPanel>
                 </Button>
             </StackPanel>
