--- a/StoryWriteWindow.xaml
+++ b/StoryWriteWindow.xaml
@@ -87,8 +87,7 @@
             </Grid>
             <Grid Grid.Row="4" Margin="0,0,0,0" PreviewGotKeyboardFocus="MetroWindow_PreviewGotKeyboardFocus">
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,0" >
-                    <materialDesign:PackIcon Name="BT_Pic" PreviewMouseLeftButtonDown="BT_Pic_MouseLeftButtonDown" Kind="Camera" Height="30" Width="30" Foreground="Gray" IsHitTestVisible="True" Background="Transparent"/>
-                    <materialDesign:PackIcon Name="BT_Video" Kind="Camcorder" Height="30" Width="30" Foreground="Gray" Margin="5,0,0,0" Background="Transparent" IsHitTestVisible="True" PreviewMouseLeftButtonDown="BT_Video_PreviewMouseLeftButtonDown"/>
+                    <materialDesign:PackIcon Name="BT_Pic" PreviewMouseLeftButtonDown="BT_Pic_MouseLeftButtonDown" Kind="PhotoLibrary" Height="30" Width="30" Foreground="Gray" IsHitTestVisible="True" Background="Transparent"/>
                     <materialDesign:PackIcon Name="BT_LinkShow" PreviewMouseLeftButtonDown="BT_LinkShow_PreviewMouseLeftButtonDown" Kind="Link" Height="30" Width="30" Foreground="Gray" IsHitTestVisible="True" Background="Transparent" Margin="5,0,0,0"/>
                     <materialDesign:PackIcon Name="BT_QuoteFriend" Kind="PersonAdd" Height="30" Width="30" Foreground="Gray" IsHitTestVisible="True" Background="Transparent" Margin="5,0,0,0" PreviewMouseLeftButtonDown="BT_QuoteFriend_PreviewMouseLeftButtonDown"/>
                 </StackPanel>
