--- a/TimeLinePageControl.xaml
+++ b/TimeLinePageControl.xaml
@@ -30,11 +30,10 @@
                     <TextBlock Name="TB_Date" Text="날짜" Margin="5,2,0,0" FontWeight="Light" />
                 </StackPanel>
                 <ScrollViewer Name="SV_Content" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  VerticalScrollBarVisibility="Auto" Margin="0,10,0,0">
-                    <StackPanel Orientation="Vertical">
+                    <StackPanel Name="SP_Main" Orientation="Vertical">
                         <TextBlock Name="TB_Content" Text="내용" TextWrapping="Wrap"/>
                         <StackPanel Name="SP_Content" Margin="0,5,0,5" Orientation="Vertical"/>
                         <local:ScrapControl x:Name="Scrap_Main" Visibility="Collapsed"/>
-                        <!--<MediaElement Name="ME_Video" Width="Auto" VerticalAlignment="Center" Stretch="Uniform" LoadedBehavior="Manual" UnloadedBehavior="Manual" Visibility="Collapsed"/>-->
                         <Grid Name="GD_Share" IsHitTestVisible="True" Background="Transparent">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="10"/>
